<resources>
    <string name="app_name">Blog App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="e_mail">e-mail</string>
    <string name="blog_app">Blog App</string>
    <string name="i_do_not_have_account">I don\'t have an account ! <u> Sing up </u> </string>
    <string name="sing_up">Sing Up</string>
    <string name="sing_in_btn">Sing In</string>
    <string name="i_have_already_an_account">I have already an account</string>
    <string name="confirmed">confirmed</string>
    <string name="user_info">User Info</string>
    <string name="select_photo">Select Photo</string>
    <string name="name">name</string>
    <string name="lastname">lastName</string>
    <string name="continue_">continue</string>

    <string name="generic_likes"> %s Likes </string>
    <string name="generic_post_count"> %s Posts </string>
    <string name="generic_comments"> View all %s comments  </string>
    <string name="some_thing_wrong">Some thing wrong</string>
    <string name="send">Send</string>
    <string name="start_writing">start writing</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_post">Edit Post</string>
    <string name="update_post">Update Post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="network_is_not_available">Network is not Available</string>
    <string name="log_out">Log Out</string>
    <string name="update_profile">Update Profile</string>
</resources>