<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.blogapp.views.mainapp.UserProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_user_profile" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.blogapp.views.mainapp.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_editPostFragment"
            app:destination="@id/editPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/newPostFragment"
        android:name="com.example.blogapp.views.mainapp.NewPostFragment"
        android:label="@string/post"
        tools:layout="@layout/fragment_new_post" />
    <fragment
        android:id="@+id/editPostFragment"
        android:name="com.example.blogapp.views.mainapp.EditPostFragment"
        android:label="@string/edit_post"
        tools:layout="@layout/fragment_edit_post" >
        <argument
            android:name="editPost"
            app:argType="com.example.blogapp.model.Post" />
    </fragment>
</navigation>