<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d9d9"
    android:orientation="vertical"
    tools:context=".views.auth.SingUpFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/leckerli_one_regular"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/blog_app"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/singUpEmailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="18dp"
        android:padding="10dp"
        app:counterTextColor="@color/colorGrey"
        app:passwordToggleDrawable="@color/colorGrey"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/singUpMailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/singUpPasswordInputLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="18dp"
        android:padding="10dp"
        app:counterTextColor="@color/colorGrey"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/singUpPasswordInputMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/singUpPasswordInputLayoutConfirmed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="18dp"
        android:padding="15dp"
        app:counterTextColor="@color/colorGrey"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/singUpPasswordInputConfirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmed"
            android:inputType="textPassword"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/singUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_main"
        android:text="@string/sing_up"
        android:textAllCaps="false"
        app:backgroundTint="@null" />


    <TextView
        android:id="@+id/iHaveAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="5dp"
        android:text="@string/i_have_already_an_account"
        android:textColor="@color/colorPrimary" />


</LinearLayout>